--- a/config.env
+++ b/config.env
@@ -5,3 +5,5 @@ PORT = 8000
 DATABASE_PASSWORD=WooTYCybrwsEYKHM
 DATABASE_USER=alfredmed1387
 CONNECTION_STRING=mongodb+srv://alfredmed1387:<PASSWORD>@cluster0.eppho.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=MYULTRASECRETTOKEN
+JWT_EXPIRES_IN=1d
