--- a/config.env
+++ b/config.env
@@ -7,3 +7,10 @@ DATABASE_USER=alfredmed1387
 CONNECTION_STRING=mongodb+srv://alfredmed1387:<PASSWORD>@cluster0.eppho.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=MYULTRASECRETTOKEN
 JWT_EXPIRES_IN=1d
+JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME=707a8b830a1ec0
+EMAIL_PASSWORD=e1fdf373b618cb
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+# smtp.mailtrap.io
+EMAIL_PORT=25
