Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
     - task: AzureWebAppContainer@1
       inputs:
        appName: $(WebAppName)
-       azureSubscription: 'Pago por uso'
+       azureSubscription: 'Pago por uso (01935c15-660b-49b8-8670-8f0989da72c1)'
        imageName: $(RegistryName)/$(webRepository):$(build.buildId)
 # steps:
 #- task: DockerInstaller@0
